# projetAnuel2020

./: README.md
cPart/: README.md
cPart/dataBaseMerger/: bringmeC  compilescript.sh  infos.txt  scriptCBdd.sql
cPart/dataBaseMerger/include/: database.h  provider.h  struct.h
cPart/dataBaseMerger/merger/: CMakeLists.txt  database.c  database.c.h  database.h  main.c
cPart/dataBaseMerger/scripts/: dump.sh  mdpScp  mdpScp.pub  script.sql  scriptScp.sh
cPart/dataBaseMerger/src/: database.c  main.c  provider.c
cPart/qrCodeGenerator/: CMakeLists.txt  confirmationWindow.glade~  databaseFunctions.c  databaseFunctions.h  general.h  graphicFunctions.c  graphicFunctions.h  main.c  mainWindow.glade  mainWindow.glade~  struct.h
javaPart/: infos.txt
javaPart/requeteur/src/: module-info.java
javaPart/requeteur/src/DBConnector/: BillConnect.java  CityConnect.java  DBconnect.java  DeliveryConnect.java  EmailConnect.java  ProviderConnect.java  ServiceConnect.java  (+1 more)
webPart/: PROVIDER  Untitled.mwb  Untitled.mwb.bak  composer.json  connexion.php  index.php  infos.txt  inscription.php  payment.php  pdfGenerator.php  profilUser.php  script.sql  scriptVide.sql  subPrice.php  subUser.php
webPart/back/: employee.php  history.php  indexBack.php  prestataires.php  provider.php  request.php  service.php  subscription.php  user.php
webPart/back/include/: headerBack.php
webPart/back/php/: addEmployee.php  contractMAJ.php  employeeMAJ.php  prestataireMAJ.php  requestValidation.php  serviceMAJ.php  subMAJ.php  userMAJ.php
webPart/css/: back.css  connexion.css  header.css  index.css  linkCss.php  pricing.css
webPart/include/: config.php  footer.php  header.php  lang.php  new_footer.php  new_header.php
webPart/international/: en.php  fr.php
webPart/login/: cancelBill.php  cancelDelivery.php  connexion.php  inscription.php  payDemand.php  payment.php  profilProvider.php  profilUser.php  setProviderAvailabilities.php
webPart/mysqlWorkBench/: bdd.mwb  bdd.mwb.bak  bdd.mwb.beforefix
webPart/php/: DatabaseManager.php  Updater.php  database.env.php  deconnexion.php  updateProvider.php  updateUser.php  verificationConnexion.php  verificationInscription.php
webPart/shop/: FindProvider.php  catalog.php  demand.php  payCart.php  payment.php
webPart/sub/: payment.php  subPrice.php  subUser.php
webPart/webgl/: index.js
webPart/webgl/random_guy/: scene.gltf
(+56 files in other folders)
